<resources>
    <string name="app_name">川师一卡通</string>
    <string name="other_login">或使用以下方式直接登录</string>
    <string name="input_mobile">请输入手机号</string>
    <string name="input_mobile_true">请输入正确的手机号</string>
    <string name="input_nikname">请输入昵称</string>
    <string name="input_nikname_length">请设置12字以内的昵称</string>
    <string name="input_mobiles">请输入您的手机号</string>
    <string name="input_code">请输入收到的验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="read">登录表示你已同意</string>
    <string name="xiyi">《川师校园生活服务平台》</string>
    <string name="code">重新获取</string>
    <string name="home">首页</string>
    <string name="school_new">校园新闻</string>
    <string name="my">个人中心</string>
    <string name="card">校园卡</string>
    <string name="exit_toast">再按一次退出程序</string>
    <string name="bind_card">绑定校园卡</string>
    <string name="input_card_num">请输入校园卡卡号</string>
    <string name="input_card_pwd">请输入校园卡密码</string>
    <string name="apily">支付宝支付</string>
    <string name="weixin_pay">微信支付</string>
    <string name="blank">中国建设银行</string>
    <string name="my_release">我的发布</string>
    <string name="personal_info">个人信息</string>
    <string name="yzm">验证码</string>
    <string name="setpassword">设置密码</string>
    <string name="messagecenter">消息中心</string>
    <string name="currency">通用</string>
    <string name="info">详情</string>
    <string name="dfcz">电费充值</string>
    <string name="card_recharge">校园卡充值</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_money">请输入充值金额</string>
    <string name="choice_class">请选择物品分类</string>
    <string name="input_lost_area">请输入物品丢失/拾取地点</string>
    <string name="input_miaoshu">请对要发布的物品进行描述，内容包括：物品特征、联系方式等</string>
    <string name="release">发布</string>
    <string name="input_money_info">请输入充值金额(最高限额1000元)</string>
    <string name="choice_school">请选择校区</string>
    <string name="choice_looer">请选择楼栋</string>
    <string name="input_qinshi">请输入寝室号</string>
    <string name="recharge_record">充值记录</string>
    <string name="record_info">账单详情</string>
    <string name="notice">通告公告</string>
    <string name="aboutus">关于我们</string>
    <string name="feedback">反馈意见</string>
    <string name="helpfeedback">帮助与反馈</string>
    <string name="operationguide">使用指南</string>
    <string name="set_pwd">请输入8-18位数密码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_advice">请描述你要反馈建议或问题</string>
    <string name="input_advice_len">请描述你要反馈建议或问题,最多500字</string>
    <string name="input_lxfs">请输入联系方式QQ/微信/电话</string>
    <string name="mange">管理</string>
    <string name="card_loss">校园卡挂失</string>
    <string name="loss_code">挂失记录</string>
    <string name="buzhu">补助查询</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="input_names">请输入您的姓名</string>
    <string name="input_zjhm">请输入身份证号或护照号</string>
    <string name="input_cost_pwd">请输入消费密码</string>
    <string name="cost_record">消费记录</string>
    <string name="card_list">校园卡</string>
    <string name="unbind">解绑</string>
    <string name="card_record">校园卡充值记录</string>
    <string name="save_money">存款信息</string>
    <string name="back">返回</string>
    <string name="dfcz_record">电费记录</string>
    <string name="reset">重置</string>
    <string name="cardbill">校园卡账单</string>
    <string name="choice_time">请选择时间</string>
    <string name="logining">登录中...</string>
    <string name="tongji_chart">账单统计</string>
    <string name="pick_up">捡卡信息</string>
    <string name="set_pwd_error">两次密码设置不一致</string>
    <string name="set_pass">设置密码</string>
    <string name="search_info">请输入搜索内容</string>
    <string name="choice_goods">请选择要删除的发布记录</string>
    <string name="sure_delete_info">确定删除这个发布信息吗？</string>
    <string name="no_data">没有更多数据啦！</string>
    <string name="notice_notify">通知公告</string>
    <string name="kafahong">陆续上线中，敬请期待</string>
    <string name="submitting">提交中...</string>
    <string name="pay_succee">充值成功</string>
    <string name="no_query_data">未查询道你想要的数据</string>
    <string name="no_kong_data">空空如也</string>
</resources>
