<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/coordinatorLayout_Style"
    app:statusBarBackground="@color/white">

    <include layout="@layout/base_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/lin_xx"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/common_height10"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/common_height15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="校区\u3000"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/ic_right"
                android:hint="@string/choice_school"
                android:paddingLeft="@dimen/common_height30"
                android:textColor="@color/black"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_line" />

        <LinearLayout
            android:id="@+id/lin_ld"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/common_height15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="楼栋\u3000"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_fooer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/ic_right"
                android:hint="@string/choice_looer"
                android:paddingLeft="@dimen/common_height30"
                android:textColor="@color/black"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/common_height15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="寝室号"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/text_size_15" />

            <EditText
                android:id="@+id/et_qs_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_qinshi"
                android:paddingLeft="@dimen/common_height30"
                android:textColor="@color/black"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <View
            android:id="@+id/view_one"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_line" />

        <Button
            android:id="@+id/bt_query"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_height45"
            android:layout_marginLeft="@dimen/common_height15"
            android:layout_marginRight="@dimen/common_height15"
            android:layout_marginTop="@dimen/common_height35"
            android:background="@drawable/bg_mian_gradient"
            android:text="查询"
            android:textColor="@color/trance99"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>