<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/coordinatorLayout_Style"
    app:statusBarBackground="@color/white">

    <include layout="@layout/base_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/common_height15"
            android:text="请绑定本人的身份信息"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/common_height15"
            android:paddingRight="@dimen/common_height15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="姓名\u3000\u3000"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/text_size_15" />

            <com.campuscard.app.view.ClearEditText
                android:id="@+id/et_car_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/input_names"
                android:paddingLeft="30dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/common_height15"
            android:paddingRight="@dimen/common_height15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="证件号码"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/text_size_15" />

            <com.campuscard.app.view.ClearEditText
                android:id="@+id/et_car_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/input_zjhm"
                android:paddingLeft="30dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/common_height15"
            android:paddingRight="@dimen/common_height15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="消费密码"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/text_size_15" />

            <com.campuscard.app.view.ClearEditText
                android:id="@+id/et_car_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/input_cost_pwd"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_bind"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_height45"
            android:layout_marginLeft="@dimen/common_height15"
            android:layout_marginRight="@dimen/common_height15"
            android:layout_marginTop="35dp"
            android:background="@drawable/bg_mian_gradient"
            android:text="绑定"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/trance99" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>